--- a/src/scss/crm-implement.scss
+++ b/src/scss/crm-implement.scss
@@ -54,8 +54,8 @@
   &-blueBtn {
     @include mainButton;
     font-size: 2.25rem;
-    height: 6.7rem;
-    width: 31.5rem;
+    height: 6.8rem;
+    width: 34.6rem;
     text-transform: uppercase;
     line-height: 1;
     border-radius: 3px;
@@ -104,9 +104,7 @@
       line-height: 1;
     }
     &-text {
-      font-weight: 350;
-      font-size: 2.5rem;
-      line-height: 1.6;
+      @include page-list-text;
       color: $dark;
     }
     &-list {
@@ -200,6 +198,16 @@
         left: 30%;
       }
     }
+  }
+}
+
+.pros-item {
+  &-header {
+    @include pros-item-header;
+  }
+
+  &-text {
+    @include pros-item-text;
   }
 }
 
