--- a/src/scss/utils/vars.scss
+++ b/src/scss/utils/vars.scss
@@ -164,3 +164,9 @@ $maxWidth: 1920px;
   border-bottom: 0.1rem solid #d9d9d9;
 }
 
+@mixin page-list-text {
+  font-weight: 350;
+  font-size: 2.5rem;
+  line-height: 1.6;
+}
+
