--- a/src/scss/pages/home/fifth-screen.scss
+++ b/src/scss/pages/home/fifth-screen.scss
@@ -1,6 +1,6 @@
 .fifth-screen {
   &-inner {
-    padding: 2rem $paddingLeft;
+    padding: 2rem $paddingLeftRight;
     display: flex;
     justify-content: center;
     &.appeal-inner {
