--- a/src/scss/pages/home/services.scss
+++ b/src/scss/pages/home/services.scss
@@ -3,7 +3,7 @@
 
 
   &-inner {
-    padding: 2rem $paddingLeft;
+    padding: 2rem $paddingLeftRight;
     display: flex;
     justify-content: center;
     margin-left: 305px;
