--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,7 +5,6 @@
 @import 'all-pages/footer';
 @import 'all-pages/prefooter';
 @import 'all-pages/prefooter-gallery';
+@import 'all-pages/feedback-form';
+@import 'all-pages/breadcrumps';
 @import 'libs/swiper';
-body{
-    // background-color: rgba(0, 0, 0, 0.376);
-}
