--- a/src/scss/all-pages/header.scss
+++ b/src/scss/all-pages/header.scss
@@ -16,11 +16,11 @@ header{
     z-index: 3;
     font-size: 2.25rem;
     display: grid;
-    padding: 2rem $paddingLeft;
+    padding: 2rem $paddingLeftRight;
     grid-template-columns: 1.5fr 8.3fr 2.2fr;
     background-color: $white;
     .header-logo{
-        padding-top: 11px;
+        padding-top: 1.6rem;
         padding-bottom: 1.6rem;
         img{
             width: 16.4rem;
