--- a/src/scss/all-pages/prefooter.scss
+++ b/src/scss/all-pages/prefooter.scss
@@ -55,10 +55,10 @@
     text-align: center;
   }
   &-arrow {
-    position: relative;
-    left: 50%;
-    width: 3rem;
-    height: 3rem;
+    //position: relative;
+    //left: 50%;
+    //width: 3rem;
+    //height: 3rem;
   }
 }
 
