--- a/src/scss/pages/home/second-screen.scss
+++ b/src/scss/pages/home/second-screen.scss
@@ -1,6 +1,6 @@
 .second-screen {
-  &-inner {
-    padding: 2rem $paddingLeft;
+  .inner {
+    padding: 2rem $paddingLeftRight;
     display: flex;
     justify-content: center;
     &.appeal-inner {
@@ -9,10 +9,10 @@
       background-position: 200% 30%;
     }
   }
-  &-wrapper {
+  .wrapper {
     @include widthContainer;
   }
-  &-subtitle {
+  .subtitle {
     padding-top: 2rem;
     li {
       align-self: center;
@@ -23,7 +23,7 @@
       }
     }
   }
-  &-text {
+  .text {
     padding: 3rem 0 5rem;
     h2 {
       color: $cyan;
@@ -47,13 +47,13 @@
       color: $white;
     }
   }
-  &-separator {
+  .separator {
     @include widthContainer;
     height: 1px;
     background-color: #698ab1;
     margin: 0 auto;
   }
-  &-intouch {
+  .intouch {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -68,108 +68,5 @@
         height: 7rem;
       }
     }
-  }
-  &-inner {
-    &.feedback-inner {
-      background-color: #303030;
-      color: $white;
-    }
-  }
-  &-feedback {
-    &-text {
-      margin: 0 auto;
-      width: fit-content;
-    }
-    &-arrow {
-      @include arrow;
-      margin: 2rem auto;
-      img {
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-        transform: rotate(-90deg);
-      }
-    }
-  &-form{
-    background-color: #5a5a5a;
-    padding: 3rem;
-    width: 80%;
-    margin: 0 auto;
-    &-title{
-      margin: 0rem auto 3rem;
-      width: fit-content;
-    }
-    &-wrapper{
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: repeat(3, 1fr);
-      grid-template-areas: 
-      'name area'
-      'mail area'
-      'tel area';
-      gap: 3rem;
-      position: relative;
-      margin-bottom: 3rem;
-      .feedback-name{
-        grid-area: name;
-      }
-      .feedback-mail{
-        grid-area: mail;
-      }
-      .feedback-tel{
-        grid-area: tel;
-      }
-      .feedback-area{
-        grid-area: area;
-      }
-      label{
-        position: absolute;
-        left: 2rem
-      }
-    }
-    &-input{
-      width: 100%;
-      color: $white;
-      background-color: #858585;
-      padding: 1rem 2rem;
-      &:focus-visible{
-        outline: none;
-      }
-      &::placeholder{
-        color:$white;
-      }
-    }
-    &-textarea{
-
-      width: 100%;
-      height: 100%;
-      color: $white;
-      background-color: #858585;
-      resize: none;
-      padding: 1rem 2rem;
-      &:focus-visible{
-        outline: none;
-      }
-      &::placeholder{
-        color:$white;
-        font-family:UZSans;
-      }
-    }
-    &-btn{
-      @include mainButton;
-    }
-    &-switch{
-      @include switch;
-    }
-    &-bottom{
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-      gap: 3rem;
-    }
-    &-agreement-text{
-      padding: 0 1rem;
-    }
-  }
   }
 }
