--- a/src/scss/pages/home/third-screen.scss
+++ b/src/scss/pages/home/third-screen.scss
@@ -1,6 +1,6 @@
 .third-screen {
   &-inner {
-    padding: 2rem $paddingLeft;
+    padding: 2rem $paddingLeftRight;
     display: flex;
     justify-content: center;
   }
