--- a/src/scss/internet-shops.scss
+++ b/src/scss/internet-shops.scss
@@ -1,11 +1,11 @@
 @import "utils/typography";
 @import "utils/vars";
-@import "fonts";
+//@import "fonts";
 
-* {
-  margin: 0;
-  box-sizing: border-box;
-}
+//* {
+//  margin: 0;
+//  box-sizing: border-box;
+//}
 
 .container {
   @include widthContainer;
