--- a/src/scss/contacts.scss
+++ b/src/scss/contacts.scss
@@ -13,8 +13,7 @@ a {
 
 .container {
   @include widthContainer;
-  max-width: calc(1280px + 40px);
-  padding: 0 16px;
+  padding: 0 15rem;
 }
 
 .svg {
@@ -31,15 +30,8 @@ a {
 
 .page {
   &-breadcrumbs {
-    padding-top: 5rem;
-    padding-bottom: 2.5rem;
-    &-cont {
-      display: flex;
-      column-gap: 9.1rem;
-    }
-    &-text {
-      @include breadcrumbs-text;
-    }
+    border: none;
+    margin-left: -15rem;
   }
 
   &-title {
@@ -89,7 +81,7 @@ a {
       position: absolute;
       left: 66%;
       z-index: 2;
-      height: 130.5rem;
+      height: 128.5rem;
       background-color: #474747;
       color: #B6B6B6;
       transform: translate(-25%);
