--- a/src/scss/crm-implement.scss
+++ b/src/scss/crm-implement.scss
@@ -9,8 +9,7 @@
 
 .container {
   @include widthContainer;
-  max-width: calc(1280px + 40px);
-  padding: 0 16px;
+  padding: 0 15rem;
 }
 
 .svg {
@@ -123,6 +122,13 @@
       padding-bottom: 3.75rem;
       width: 100%;
     }
+    &-img {
+      width: 2.5rem;
+      height: 2.5rem;
+      object-fit: cover;
+      position: relative;
+      top: 0.7rem;
+    }
   }
 }
 
@@ -192,6 +198,7 @@
         row-gap: 2.5rem;
         position: relative;
         left: 30%;
+        width: 50%;
       }
     }
   }
