Maintenance: added styles in this page.

--- a/src/scss/amocrm.scss
+++ b/src/scss/amocrm.scss
@@ -155,14 +155,7 @@ a {
 
 .amocrm {
   &-description {
-    padding-top: 3.75rem;
-    padding-bottom: 3.75rem;
-    &-text {
-      font-weight: 350;
-      font-size: 2.5rem;
-      line-height: 1.6;
-      color: $dark;
-    }
+    @include description;
   }
 }
 
