--- a/src/scss/utils/vars.scss
+++ b/src/scss/utils/vars.scss
@@ -163,3 +163,12 @@ $maxWidth: 1920px;
   line-height: 1.6;
 }
 
+@mixin description {
+  font-weight: 350;
+  font-size: 2.5rem;
+  line-height: 1.6;
+  padding-top: 3.75rem;
+  padding-bottom: 3.75rem;
+  color: $dark;
+}
+
