--- a/src/scss/automation.scss
+++ b/src/scss/automation.scss
@@ -117,12 +117,7 @@ a {
 
 .automation {
   &-description {
-    color: $dark;
-    font-weight: 350;
-    font-size: 2.5rem;
-    line-height: 1.6;
-    padding-top: 3.75rem;
-    padding-bottom: 3.75rem;
+    @include description;
   }
 
   &-advantages {
