--- a/src/scss/all-pages/dropdown.scss
+++ b/src/scss/all-pages/dropdown.scss
@@ -24,6 +24,7 @@
     &-title{
       font-size: 3rem;
       font-weight: bold;
+      list-style-type: none;
     }
     &-item{
       list-style-type: none;
