--- a/src/scss/all-pages/prefooter-gallery.scss
+++ b/src/scss/all-pages/prefooter-gallery.scss
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: row;
     column-gap: 2.5rem;
+    justify-content: space-between;
   }
   &-item {
     object-fit: contain;
