--- a/src/scss/support.scss
+++ b/src/scss/support.scss
@@ -62,21 +62,22 @@
     &-container {
       padding-top: 10rem;
       padding-bottom: 30px;
-      display: grid;
-      grid-template-columns: repeat(4, 38.1rem);
-      grid-template-rows: repeat(2, auto);
-      column-gap: 2.5rem;
-      justify-content: space-between;
+      display: flex;
+      flex-direction: column;
+      row-gap: 4.37rem;
     }
 
     &-title {
-      padding-bottom: 5rem;
       font-weight: 350;
       font-size: 40px;
       line-height: 1;
       color: $dark;
       text-align: center;
-      grid-area: 1 / 1 / 2 / 7;
+    }
+
+    &-block {
+      display: flex;
+      justify-content: space-between;
     }
 
     &-item {
@@ -101,7 +102,7 @@
     &-block {
       display: flex;
       column-gap: 3.75rem;
-      justify-content: center;
+      justify-content: space-between;
     }
     &-item {
       padding: 2.5rem;
@@ -111,7 +112,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      height: 30.1rem;
+      height: 34.1rem;
     }
   }
 
